[gd_scene load_steps=2 format=3 uid="uid://dg64qu0aj0j6h"]

[ext_resource type="Script" path="res://scenes/components/sound_components/loop_sound_component.gd" id="1_qrvg8"]

[node name="LoopSoundComponent" type="AudioStreamPlayer2D"]
max_distance = 200.0
script = ExtResource("1_qrvg8")

[node name="TrackDelay" type="Timer" parent="."]

[node name="PlayCooldown" type="Timer" parent="."]

[connection signal="finished" from="." to="." method="_on_finished"]
